# Test

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  club.hpp  test.cpp  time.hpp
